# Pulse

./: .gitignore  Cargo.toml  README.md
assets/: AppIcon.icns
docs/: index.html
scripts/: bundle.sh  make_dmg.sh  make_icons.sh
src/: app.rs  autostart.rs  config.rs  main.rs  metrics.rs  theme.rs  tray.rs  util.rs  widgets.rs
